# WFiIS-PSiC-PROJECT-2019

./: CMakeLists.txt  makefile
src/: HttpRequestMessage.cpp  HttpRequestMessage.h  HttpRequester.cpp  HttpRequester.h  HttpResponseMessage.cpp  HttpResponseMessage.h  HttpServer.cpp  HttpServer.h  main.cpp
zeroInstall/lib/: libzmq.la
zeroInstall/lib/pkgconfig/: libzmq.pc
